--- a/src/package.json
+++ b/src/package.json
@@ -56,7 +56,7 @@
     "node-sass": "~3.8.0",
     "normalize.css": "~4.2.0",
     "postcss-loader": "~0.10.1",
-    "react": "~15.3.0",
+    "react": "^15.3.2",
     "react-addons-css-transition-group": "~15.3.0",
     "react-addons-update": "~15.3.0",
     "react-dom": "~15.3.0",
